--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.45) bionic; urgency=medium
+
+  * Initial release for bionic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 03 Oct 2018 09:21:56 +0200
+
 zero-lliurex-gearth (0.35) xenial; urgency=medium
 
   * Removed sources list after installation
