--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.46) bionic; urgency=medium
+
+  * Changed adm group by sudo 
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 05 Mar 2019 15:53:30 +0100
+
 zero-lliurex-gearth (0.45) bionic; urgency=medium
 
   * Initial release for bionic
