--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.57) focal; urgency=medium
+
+  * Initial release for focal
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 27 Jan 2021 14:29:42 +0100
+
 zero-lliurex-gearth (0.47) bionic; urgency=medium
 
   * Added custom icon in epi file
