--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.58) focal; urgency=medium
+
+  * Added custom name in epi
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Tue, 25 May 2021 17:15:49 +0200
+
 zero-lliurex-gearth (0.57) focal; urgency=medium
 
   * Initial release for focal
