--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.47.1) bionic-updates; urgency=medium
+
+  * Added custom name in epi file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 16 Jun 2021 12:40:19 +0200
+
 zero-lliurex-gearth (0.47) bionic; urgency=medium
 
   * Added custom icon in epi file
