--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.58.1) focal; urgency=medium
+
+  * Fixed app file
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 16 Jun 2021 13:41:37 +0200
+
 zero-lliurex-gearth (0.58) focal; urgency=medium
 
   * Added custom name in epi
