--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.47.3) bionic-updates; urgency=medium
+
+  * Allow all groups
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 09 Nov 2022 12:08:10 +0100
+
 zero-lliurex-gearth (0.47.2) bionic-updates; urgency=medium
 
   * Fixed app file
