--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zero-lliurex-gearth (0.69) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Mon, 04 Sep 2023 09:47:31 +0200
+
 zero-lliurex-gearth (0.59) lliurex22; urgency=medium
 
   * Allow all groups
